--- a/_includes/scripts.html
+++ b/_includes/scripts.html
@@ -1,10 +1,9 @@
-<!--/Scripts--> 
+	<!--/Scripts--> 
     <script type="text/javascript" src="assets/js/jquery.js"></script>
     <script type="text/javascript" src="assets/js/bootstrap.min.js"></script>	
-  	<script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDGXvKr3PVQ9Y72XJmsVk4FvceFkhWu3k4&callback=initMap"
-  	type="text/javascript"></script>  	
+  	<script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=true"></script> 	
   	<script type="text/javascript" src="assets/js/gmaps.js"></script>
   	<script type="text/javascript" src="assets/js/canvas.js"></script>
 	<script type="text/javascript" src="assets/js/jquery.isotope.min.js"></script>
 	<script type="text/javascript" src="assets/js/wow.min.js"></script>
-    <script type="text/javascript" src="assets/js/main.js"></script>	
+    <script type="text/javascript" src="assets/js/main.js"></script>		
