Addition of placeholder pictures

--- a/_includes/services.html
+++ b/_includes/services.html
@@ -41,8 +41,8 @@
 					<div class="single-service wow flipInY" data-wow-duration="1500ms" data-wow-delay="350ms">
 						<div class="row">
 							<div class="col-sm-4 col-md-3">
-								<div class="single-service-icon wow rotateIn" data-wow-duration="1000ms" data-wow-delay="300ms">
-									<i class="fa fa-bolt"></i>
+								<div class="icon icon-support icon-support-dims service-icon wow rotateIn" data-wow-duration="1000ms" data-wow-delay="300ms">
+									
 								</div>							
 							</div>
 							<div class="col-sm-8 col-md-9">
@@ -58,8 +58,8 @@
 					<div class="single-service  wow flipInY" data-wow-duration="2000ms" data-wow-delay="400ms">
 						<div class="row">
 							<div class="col-sm-4 col-md-3">
-								<div class="single-service-icon wow rotateIn" data-wow-duration="1000ms" data-wow-delay="300ms">
-									<i class="fa fa-rocket"></i>
+								<div class="icon icon-garden icon-garden-dims service-icon wow rotateIn" data-wow-duration="1000ms" data-wow-delay="300ms">
+									
 								</div>								
 							</div>
 							<div class="col-sm-8 col-md-9">
@@ -75,8 +75,8 @@
 					<div class="single-service wow flipInY" data-wow-duration="2500ms" data-wow-delay="450ms">
 						<div class="row">
 							<div class="col-sm-4 col-md-3">
-								<div class="single-service-icon wow rotateIn" data-wow-duration="1000ms" data-wow-delay="300ms">
-									<i class="fa fa-phone"></i>
+								<div class="icon icon-crafts icon-crafts-dims service-icon wow rotateIn" data-wow-duration="1000ms" data-wow-delay="300ms">
+									
 								</div>								
 							</div>
 							<div class="col-sm-8 col-md-9">
