--- a/_includes/about.html
+++ b/_includes/about.html
@@ -4,7 +4,7 @@
 				<div class="row">
 					<div class="col-sm-8 col-sm-offset-2 col-md-6 col-md-offset-0">
 						<div class="about-image">
-							<img class="img-responsive" src="assets/images/about-us/about.jpg" alt="" />
+							<img class="img-responsive" src="assets/images/about-us/beacon.png" alt="" />
 						</div>						
 					</div>
 					<div class="col-sm-8 col-sm-offset-2 col-md-6 col-md-offset-0">
