--- a/_includes/portfolio.html
+++ b/_includes/portfolio.html
@@ -12,12 +12,12 @@
 					<div class="item active row">
 						<div class="col-sm-6">
 							<div class="recent-port-img animated fadeInUpBig">
-								<img class="img-responsive" src="assets/images/portfolio/slide1.jpg" alt="portfolio" />
+								<img class="img-responsive" src="assets/images/portfolio/gardenmain.jpg" alt="portfolio" />
 							</div>							
 						</div>
 						<div class="col-sm-6 default-bg">
 							<div class="recent-port-text animated fadeInDownBig">
-								<h2>Recent Project</h2>
+								<h2>Garden Project</h2>
 								<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries </p>
 								<ul>
 									<li><i class="fa fa-angle-double-right"></i> But also the leap into electronic typesetting, </li>
@@ -31,12 +31,12 @@
 					<div class="item row">
 						<div class="col-sm-6">
 							<div class="recent-port-img animated fadeInUpBig">
-								<img class="img-responsive" src="assets/images/portfolio/slide2.jpg" alt="portfolio" />
+								<img class="img-responsive" src="assets/images/portfolio/gardenparty.jpg" alt="portfolio" />
 							</div>							
 						</div>
 						<div class="col-sm-6 default-bg">
 							<div class="recent-port-text animated fadeInDownBig">
-								<h2>Recent Project</h2>
+								<h2>Garden Party</h2>
 								<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries </p>
 								<ul>
 									<li><i class="fa fa-angle-double-right"></i> But also the leap into electronic typesetting, </li>
@@ -50,12 +50,12 @@
 					<div class="item row">
 						<div class="col-sm-6">
 							<div class="recent-port-img animated fadeInUpBig">
-								<img class="img-responsive" src="assets/images/portfolio/slide3.jpg" alt="portfolio" />
+								<img class="img-responsive" src="assets/images/portfolio/harbourday.jpg" alt="portfolio" />
 							</div>							
 						</div>
 						<div class="col-sm-6 default-bg">
 							<div class="recent-port-text animated fadeInDownBig">
-								<h2>Recent Project</h2>
+								<h2>Harbour Day</h2>
 								<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries </p>
 								<ul>
 									<li><i class="fa fa-angle-double-right"></i> But also the leap into electronic typesetting, </li>
@@ -89,7 +89,7 @@
 					<div class="col-sm-4 portfolio-item architecture business">
 						<div class="view">
 							<div class="portfolio-image">
-								<img class="img-responsive" src="assets/images/portfolio/1.jpg" alt="">
+								<img class="img-responsive" src="assets/images/portfolio/1williamwood.jpg" alt="">
 							</div>	
 							<div class="mask">
 								<a href="#" data-single_url="single-portfolio.html"><i class="fa fa-link"></i></a>
@@ -99,7 +99,7 @@
 					<div class="col-sm-4 portfolio-item animation web corporate">
 						<div class="view">
 							<div class="portfolio-image">
-								<img class="img-responsive" src="assets/images/portfolio/2.jpg" alt="">
+								<img class="img-responsive" src="assets/images/portfolio/2firstaid.jpg" alt="">
 							</div>	
 							<div class="mask">
 								<a href="#" data-single_url="single-portfolio.html"><i class="fa fa-link"></i></a>
@@ -109,7 +109,7 @@
 					<div class="col-sm-4 portfolio-item video creative">
 						<div class="view">
 							<div class="portfolio-image">
-								<img class="img-responsive" src="assets/images/portfolio/3.jpg" alt="">
+								<img class="img-responsive" src="assets/images/portfolio/3entertainment.jpg" alt="">
 							</div>	
 							<div class="mask">
 								<a href="#" data-single_url="single-portfolio.html"><i class="fa fa-link"></i></a>
@@ -119,7 +119,7 @@
 					<div class="col-sm-4 portfolio-item animation architecture">
 						<div class="view">
 							<div class="portfolio-image">
-								<img class="img-responsive" src="assets/images/portfolio/4.jpg" alt="">
+								<img class="img-responsive" src="assets/images/portfolio/4bowling.jpg" alt="">
 							</div>	
 							<div class="mask">
 								<a href="#" data-single_url="single-portfolio.html"><i class="fa fa-link"></i></a>
@@ -129,7 +129,7 @@
 					<div class="col-sm-4 portfolio-item architecture creative web">
 						<div class="view">
 							<div class="portfolio-image">
-								<img class="img-responsive" src="assets/images/portfolio/5.jpg" alt="">
+								<img class="img-responsive" src="assets/images/portfolio/5regionday.jpg" alt="">
 							</div>	
 							<div class="mask">
 								<a href="#" data-single_url="single-portfolio.html"><i class="fa fa-link"></i></a>
@@ -139,7 +139,7 @@
 					<div class="col-sm-4 portfolio-item animation web video">
 						<div class="view">
 							<div class="portfolio-image">
-								<img class="img-responsive" src="assets/images/portfolio/6.jpg" alt="">
+								<img class="img-responsive" src="assets/images/portfolio/6kelpies.jpg" alt="">
 							</div>	
 							<div class="mask">
 								<a href="#" data-single_url="single-portfolio.html"><i class="fa fa-link"></i></a>
