end of day cleanup

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -50,7 +50,7 @@
 		</div>		
 		<div class="bottom default-bg text-center wow fadeIn" data-wow-duration="1500ms" data-wow-delay="300ms">
 			<div class="container  text-center">
-				<p>copyright &copy; 2017 butex theme. All Rights Reserved.<br> Designed by <a href="http://www.themeregion.com">ThemeRegion</a><br>With contributions by David Colquhoun</p>				
+				<p>copyright &copy; 2017 butex theme. All Rights Reserved.<br> Template by <a href="http://www.themeregion.com">ThemeRegion</a><br><b>Site Design</b> - <a href="mailto:email@davidcolquhoun.uk"><i class="fa fa-envelope-o left">&nbsp;</i>design@davidcolquhoun.uk</a></p>				
 			</div>
 		</div>	
 	</footer><!--/#footer--> 
