--- a/_includes/scripts.html
+++ b/_includes/scripts.html
@@ -1,8 +1,8 @@
-	<!--/Scripts--> 
+	<!--/Scripts-->
+	<script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB5lqyBJMSd2halLa37MHqTOFUyefJ9bRM&callback=init"></script>
+    <script type="text/javascript" src="assets/js/gmaps.js"></script> 
     <script type="text/javascript" src="assets/js/jquery.js"></script>
-    <script type="text/javascript" src="assets/js/bootstrap.min.js"></script>	
-  	<script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=true"></script> 	
-  	<script type="text/javascript" src="assets/js/gmaps.js"></script>
+    <script type="text/javascript" src="assets/js/bootstrap.min.js"></script>		
   	<script type="text/javascript" src="assets/js/canvas.js"></script>
 	<script type="text/javascript" src="assets/js/jquery.isotope.min.js"></script>
 	<script type="text/javascript" src="assets/js/wow.min.js"></script>
