tiy footer error - missing <span>

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -39,7 +39,7 @@
 					<div class="col-sm-12 col-md-3 col-md-offset-1 contact-details wow fadeInUp" data-wow-duration="1600ms" data-wow-delay="500ms">
 						<h2>Contact Us</h2>
 						<ul>
-							<li><i class="fa fa-phone"></i> <span>Phone number <br>01461 246444</span></li>							
+							<li><i class="fa fa-phone"></i> <span>Phone number<span><br>01461 246444</span></li>							
 							<li><i class="fa fa-map-marker"></i> <span>Our address:<br>2-4 Bank Street, Annan, DG12 6AA</span></li>							
 							<li><i class="fa fa-envelope"></i> <span>Email address:<br>info@kateskitchen.org</span></li>							
 							<li><i class="fa fa-twitter"></i> <span>Twitter:<br>twitter.com/themeregion</span></li>							
